--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title: Yummy Theme # ex. I m Chuan
-name: Your Name # ex. DONGChuan
-email: my_email_address@lalala.com
+name: Çü°Á# ex. DONGChuan
+email: 812117147@qq.com
 location: My location # ex. Nice, France
 company: MyCompany
 company_url: my_company_website
