--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Yummy Theme # ex. I m Chuan
-name: 'Çü°Á'
+name: QUAO
 email: 812117147@qq.com
 location: My location # ex. Nice, France
 company: MyCompany
