--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Yummy Theme # ex. I m Chuan
 name: QUAO
 email: 812117147@qq.com
-location: My location # ex. Nice, France
+location: Tuqiang Street 321 China Dalian Economic and Technological Development Zone
 company: MyCompany
 company_url: my_company_website
 github_url: my_github_url # ex. https://github.com/DONGChuan
