--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yummy Theme # ex. I m Chuan
+title: Homepage
 name: QUAO
 email: 812117147@qq.com
 location: Tuqiang Street 321 China Dalian Economic and Technological Development Zone
@@ -19,7 +19,7 @@ repository: github_username/github_username.github.io # ex. DONGChuan/DONGChuan.
 
 # The base hostname & protocol for your site
 # For local test, please use http://localhost:4000
-# For production, use your github page url. ex. http://dongchuan.github.io
+# http://quaoao.github.io 
 url: http://localhost:4000
 
 ## Gem
