--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Homepage
 name: QUAO
 email: 812117147@qq.com
 location: Tuqiang Street 321 China Dalian Economic and Technological Development Zone
-company: MyCompany
+company: SSDUT
 company_url: my_company_website
 github_url: my_github_url # ex. https://github.com/DONGChuan
 description: description_of_your_web_site
